communication between integration runner and python frame writer

--- a/integration-runner/package.json
+++ b/integration-runner/package.json
@@ -4,14 +4,15 @@
   "description": "NZXT CAM inner integration browser imitation",
   "main": "window.js",
   "dependencies": {
-    "electron": "^39.2.0"
+    "electron": "^39.2.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@nzxt/web-integrations-types": "^0.4.1"
   },
   "scripts": {
-    "start": "electron . --width=640 --height=640 --url=https://www.pouekdev.one/nzxt-integration/ --configuration=0",
-    "configure": "electron . --width=640 --height=640 --url=https://www.pouekdev.one/nzxt-integration/ --configuration=1"
+    "start": "electron . --width=640 --height=640 --url=https://www.pouekdev.one/nzxt-integration/ --configuration=0 --fps=30",
+    "configure": "electron . --width=640 --height=640 --url=https://www.pouekdev.one/nzxt-integration/ --configuration=1 --fps=60"
   },
   "author": "PouekDEV",
   "license": "MIT"
