--- a/integration-runner/package.json
+++ b/integration-runner/package.json
@@ -4,15 +4,25 @@
   "description": "NZXT CAM inner integration browser imitation",
   "main": "window.js",
   "dependencies": {
-    "electron": "^39.2.0",
+    "electron-squirrel-startup": "^1.0.1",
     "ws": "^8.18.3"
   },
   "devDependencies": {
-    "@nzxt/web-integrations-types": "^0.4.1"
+    "@electron-forge/cli": "^7.10.2",
+    "@electron-forge/maker-deb": "^7.10.2",
+    "@electron-forge/maker-rpm": "^7.10.2",
+    "@electron-forge/maker-zip": "^7.10.2",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.10.2",
+    "@electron-forge/plugin-fuses": "^7.10.2",
+    "@electron/fuses": "^1.8.0",
+    "@nzxt/web-integrations-types": "^0.4.1",
+    "electron": "^39.2.2"
   },
   "scripts": {
-    "start": "electron . --width=640 --height=640 --url=https://www.pouekdev.one/nzxt-integration/ --configuration=0 --fps=30",
-    "configure": "electron . --width=640 --height=640 --url=https://www.pouekdev.one/nzxt-integration/ --configuration=1 --fps=60"
+    "start": "electron-forge start -- --width=640 --height=640 --url=https://www.pouekdev.one/nzxt-integration/ --configuration=0 --fps=30",
+    "configure": "electron-forge start -- --width=640 --height=640 --url=https://www.pouekdev.one/nzxt-integration/ --configuration=1 --fps=60",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "author": "PouekDEV",
   "license": "MIT"
